reference coordinates displayed, myvariantinfo missing logic added

--- a/client/src/app/views/variants/variants-summary/variants-summary.component.html
+++ b/client/src/app/views/variants/variants-summary/variants-summary.component.html
@@ -19,10 +19,16 @@
               [nzColumn]="1">
 
               <nz-descriptions-item nzTitle="Description">
-                <p nz-typography
+                <p *ngIf="variant.description; else noDescription" nz-typography
                   nzEllipsis
                   nzExpandable
                   [nzEllipsisRows]="14">{{ variant.description }}</p>
+
+                <!-- noDescription Tpl -->
+                <ng-template #noDescription>
+                  <cvc-empty-revisable notification="No description provided"> </cvc-empty-revisable>
+                </ng-template>
+
               </nz-descriptions-item>
 
               <!-- sources -->
@@ -93,8 +99,8 @@
 
       <!-- allele/clinvar ids, coordinates, myvariantinfo col -->
       <nz-col nzSpan="12">
-        <!-- myvariantinfo -->
         <nz-space nzDirection="vertical">
+
           <!-- allele registry id, clinvar IDs -->
           <nz-space-item>
             <nz-descriptions nzLayout="horizontal"
@@ -121,15 +127,15 @@
               </nz-descriptions-item>
 
               <!-- clinvar ids-->
-              <nz-descriptions-item [nzTitle]="variant.clinvarIds.length > 1 ? 'Clinvar IDs' : 'Clinvar ID'"
+              <nz-descriptions-item [nzTitle]="variant.clinvarIds.length > 1 ? 'ClinVar IDs' : 'ClinVar ID'"
                 nzSpan="2">
                 <ng-container *ngIf="variant.clinvarIds.length > 0 else noClinvarIds">
                   <ng-container *ngFor="let id of variant.clinvarIds; let last = last">
                     <cvc-tag-list *ngIf="id !== 'N/A', else clinvarNotApplicable">
-                      <cvc-link-tag [href]="'https://www.ncbi.nlm.nih.gov/clinvar/variation/' + id">
+                      <cvc-link-tag [href]="'https://www.ncbi.nlm.nih.gov/clinvar/variation/' + id"
+                        tooltip="View on ClinVar">
                         {{ id }}
                       </cvc-link-tag>
-
                     </cvc-tag-list>
                     <ng-container *ngIf="!last">, </ng-container>
                   </ng-container>
@@ -139,6 +145,7 @@
                   <span nz-typography
                     nzType="secondary">N/A</span>
                 </ng-template>
+
                 <ng-template #noClinvarIds>
                   <span nz-typography
                     nzType="secondary">None provided</span>
@@ -147,39 +154,134 @@
 
             </nz-descriptions>
           </nz-space-item>
+
+
+          <!-- coordinates -->
           <nz-space-item>
-            <cvc-my-variant-info [variantInfo]="variantInfo$ | ngrxPush"></cvc-my-variant-info>
+            <nz-card nzTitle="Representative Variant Coordinates">
+              <!-- check for reference build, display empty msg if missing -->
+              <ng-container *ngIf="variant.referenceBuild else noCoordinates">
+
+                <!-- ref build, ensembl version -->
+                <nz-descriptions nzLayout="horizontal"
+                  [nzColumn]="2"
+                  nzBordered="true"
+                  nzSize="small">
+
+                  <nz-descriptions-item nzTitle="Ref. Build">
+                    {{ variant.referenceBuild }}
+                  </nz-descriptions-item>
+
+                  <nz-descriptions-item nzTitle="Ensembl Version">
+                    {{ variant.ensemblVersion}}
+                  </nz-descriptions-item>
+
+                </nz-descriptions>
+
+                <!-- 5' coordinates -->
+                <ng-container *ngIf="variant.fivePrimeCoordinates?.chromosome">
+                  <!-- <ng-container *ngIf="variant.fivePrimeCoordinates?.chromosome; else noCoordinates"> -->
+                  <nz-descriptions *ngIf="variant.fivePrimeCoordinates as coords" nzTitle="5' Coordinates"
+                    nzLayout="horizontal" nzBordered="true" nzSize="small" [nzColumn]="5">
+
+                    <!-- chromosome -->
+                    <nz-descriptions-item nzTitle="Chr." nzColumn="1">
+                      {{ coords.chromosome }}
+                    </nz-descriptions-item>
+
+                    <!-- start -->
+                    <nz-descriptions-item nzTitle="Start" nzColumn="1">
+                      {{ coords.start }}
+                    </nz-descriptions-item>
+
+                    <!-- stop -->
+                    <nz-descriptions-item nzTitle="Stop" nzColumn="1">
+                      {{ coords.stop }}
+                    </nz-descriptions-item>
+
+                    <!-- reference bases -->
+                    <nz-descriptions-item nzTitle="Ref. Bases" nzColumn="1">
+                      {{ coords.referenceBases | ifEmpty: '--'}}
+                    </nz-descriptions-item>
+
+                    <!-- variant bases-->
+                    <nz-descriptions-item nzTitle="Var. Bases" nzColumn="1">
+                      {{ coords.variantBases | ifEmpty: '--'}}
+                    </nz-descriptions-item>
+
+                    <!-- representative transcript -->
+                    <nz-descriptions-item nzTitle="Transcript" nzColumn="5">
+                      <cvc-link-tag tooltip="View on Esembl"
+                        [href]="'http://www.ensembl.org/Homo_sapiens/transview?transcript=' + coords.representativeTranscript">
+                        {{ coords.representativeTranscript }}
+                      </cvc-link-tag>
+                    </nz-descriptions-item>
+
+                  </nz-descriptions>
+                </ng-container>
+
+                <!-- 3' coordinates -->
+                <ng-container *ngIf="variant.threePrimeCoordinates?.chromosome">
+                  <nz-descriptions *ngIf="variant.threePrimeCoordinates as coords" nzTitle="3' Coordinates"
+                    nzLayout="horizontal" nzBordered="true" nzSize="small" [nzColumn]="5">
+
+                    <!-- chr. -->
+                    <nz-descriptions-item nzTitle="Chr." nzColumn="1">
+                      {{ coords.chromosome }}
+                    </nz-descriptions-item>
+
+                    <!-- start -->
+                    <nz-descriptions-item nzTitle="Start" nzColumn="1">
+                      {{ coords.start }}
+                    </nz-descriptions-item>
+
+                    <!-- stop -->
+                    <nz-descriptions-item nzTitle="Stop" nzColumn="1">
+                      {{ coords.stop }}
+                    </nz-descriptions-item>
+
+                    <!-- reference bases -->
+                    <nz-descriptions-item nzTitle="Ref. Bases" nzColumn="1">
+                      {{ coords.referenceBases | ifEmpty: '--'}}
+                    </nz-descriptions-item>
+
+                    <!-- variant bases-->
+                    <nz-descriptions-item nzTitle="Var. Bases" nzColumn="1">
+                      {{ coords.variantBases | ifEmpty: '--'}}
+                    </nz-descriptions-item>
+
+                    <!-- representative transcript -->
+                    <nz-descriptions-item nzTitle="Transcript" nzColumn="5">
+                      <cvc-link-tag tooltip="View on Esembl"
+                        [href]="'http://www.ensembl.org/Homo_sapiens/transview?transcript=' + coords.representativeTranscript">
+                        {{ coords.representativeTranscript }}
+                      </cvc-link-tag>
+                    </nz-descriptions-item>
+
+                  </nz-descriptions>
+                </ng-container>
+              </ng-container>
+
+              <!-- empty template -->
+              <ng-template #noCoordinates>
+                <cvc-empty-revisable notification="No coordinates specified"> </cvc-empty-revisable>
+              </ng-template>
+
+            </nz-card>
+          </nz-space-item>
+          <!-- myvariant info -->
+          <nz-space-item>
+            <ng-container *ngIf="variantInfo$ | ngrxPush as variantInfo else noVariantInfo">
+              <cvc-my-variant-info [variantInfo]="variantInfo"></cvc-my-variant-info>
+            </ng-container>
+            <ng-template #noVariantInfo>
+              <nz-card nzTitle="MyVariantInfo" >
+                <cvc-empty-revisable notification="Not available, provide HGVS coordinates"> </cvc-empty-revisable>
+              </nz-card>
+            </ng-template>
           </nz-space-item>
         </nz-space>
 
-        <!-- coordinates -->
-        <nz-space-item>
-          <nz-card nzTitle="Representative Variant Coordinates">
-
-            <!-- ref build, ensembl version -->
-            <nz-descriptions nzLayout="horizontal"
-              [nzColumn]="2"
-              nzBordered="true"
-              nzSize="small">
-              <nz-descriptions-item nzTitle="Ref. Build">
-                {{ variant.referenceBuild }}
-              </nz-descriptions-item>
-              <nz-descriptions-item nzTitle="Ensembl Version">
-                {{ variant.ensemblVersion}}
-              </nz-descriptions-item>
-            </nz-descriptions>
-
-            <nz-descriptions nzTitle="5' Coordinates"
-              nzLayout="horizontal">
-
-            </nz-descriptions>
-
-            <nz-descriptions nzTitle="5' Coordinates"
-              nzLayout="horizontal">
-
-            </nz-descriptions>
-          </nz-card>
-        </nz-space-item>
 
       </nz-col>
 
