--- a/client/src/app/components/shared/disease-popover/disease-popover.component.html
+++ b/client/src/app/components/shared/disease-popover/disease-popover.component.html
@@ -8,7 +8,9 @@
          {{ d.name }}
       </ng-template>
       <ng-template #linkout>
-        <cvc-link-tag [link]="{url: d.diseaseUrl, label: 'DOID:' + d.doid, tooltip: 'View on disease-ontology.org'}"></cvc-link-tag>
+        <cvc-link-tag [href]="d.diseaseUrl" tooltip="View on disease-ontology.org">
+          DOID: {{ d.doid }}
+        </cvc-link-tag>
       </ng-template>
       <nz-descriptions nzSize="small"
         [nzColumn]="1"
