--- a/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
+++ b/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
@@ -9,7 +9,9 @@
       </nz-space>
     </nz-page-header-title>
     <nz-page-header-extra>
-      <cvc-link-tag [link]="{url: phenotype.url, label: phenotype.hpoId, tooltip: 'View in the HPO'}"></cvc-link-tag>
+      <cvc-link-tag [href]="phenotype.url" tooltip="View in the HPO">
+        {{ phenotype.hpoId }}
+      </cvc-link-tag>
     </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
