evidence summary now uses source-tag

--- a/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
+++ b/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
@@ -32,7 +32,7 @@
               <!-- source -->
               <nz-descriptions-item nzTitle="Source"
                 nzSpan="2">
-                {{ evidence.source.sourceType}}: {{ evidence.source.citation}}
+                <cvc-source-tag [source]="evidence.source"> </cvc-source-tag>
               </nz-descriptions-item>
 
               <!-- clinical trials -->
