--- a/client/src/app/components/shared/my-variant-info/my-variant-info.component.html
+++ b/client/src/app/components/shared/my-variant-info/my-variant-info.component.html
@@ -23,7 +23,9 @@
                 {{ variantInfo.myVariantInfoId }}
                 <strong style="margin-left: 8px;">ClinVar ID:</strong>&nbsp;
                 <ng-container *ngIf="variantInfo.clinvarId; else noValue">
-                    <a href="https://www.ncbi.nlm.nih.gov/clinvar/variation/{{variantInfo.clinvarId}}/" target="_blank">{{ variantInfo.clinvarId}}</a>
+                  <cvc-link-tag href="https://www.ncbi.nlm.nih.gov/clinvar/variation/{{variantInfo.clinvarId}}/" tooltip="View on ClinVar">
+                    {{variantInfo.clinvarId}}
+                  </cvc-link-tag>
                 </ng-container>
               </div>
             </div>
@@ -33,11 +35,15 @@
               </div>
               <div nz-col [nzSpan]="18">
                 <ng-container *ngIf="variantInfo.dbsnpRsid; else noValue">
-                  <a href="https://www.ncbi.nlm.nih.gov/projects/SNP/snp_ref.cgi?searchType=adhoc_search&type=rs&rs={{variantInfo.dbsnpRsid}}" target="_blank">{{ variantInfo.dbsnpRsid }}</a>
+                  <cvc-link-tag href="https://www.ncbi.nlm.nih.gov/projects/SNP/snp_ref.cgi?searchType=adhoc_search&type=rs&rs={{variantInfo.dbsnpRsid}}" tooltip="View on dbSNP">
+                    {{variantInfo.dbsnpRsid}}
+                  </cvc-link-tag>
                 </ng-container>
                 <strong style="margin-left: 8px;">COSMIC ID (v68):</strong>&nbsp;
                 <ng-container *ngIf="variantInfo.cosmicId; else noValue">
-                  <a href="http://cancer.sanger.ac.uk/cosmic/mutation/overview?id={{variantInfo.cosmicId}}" target="_blank">{{ variantInfo.cosmicId}}</a>
+                  <cvc-link-tag href="http://cancer.sanger.ac.uk/cosmic/mutation/overview?id={{variantInfo.cosmicId}}" tooltip="View on COSMIC">
+                    {{variantInfo.cosmicId}}
+                  </cvc-link-tag>
                 </ng-container>
               </div>
             </div>
@@ -76,11 +82,15 @@
               </div>
               <div nz-col [nzSpan]="18">
                 <ng-container *ngIf="variantInfo.clinvarId; else noValue">
-                    <a href="https://www.ncbi.nlm.nih.gov/clinvar/variation/{{variantInfo.clinvarId}}/" target="_blank">{{ variantInfo.clinvarId}}</a>
+                  <cvc-link-tag href="https://www.ncbi.nlm.nih.gov/clinvar/variation/{{variantInfo.clinvarId}}/" tooltip="View on ClinVar">
+                    {{variantInfo.clinvarId}}
+                  </cvc-link-tag>
                 </ng-container>
-                <strong style="margin-left: 8px;">Omim:</strong>&nbsp;
+                <strong style="margin-left: 8px;">OMIM:</strong>&nbsp;
                 <ng-container *ngIf="variantInfo.clinvarOmim; else noValue">
-                  <a href="https://omim.org/entry/{{variantInfo.clinvarOmim.split('.')[0]}}" target="_blank">{{ variantInfo.clinvarOmim}}</a>
+                  <cvc-link-tag href="https://omim.org/entry/{{ variantInfo.clinvarOmim.split('.')[0] }}" tooltip="View on OMIM">
+                    {{variantInfo.clinvarOmim}}
+                  </cvc-link-tag>
                 </ng-container>
               </div>
             </div>
@@ -148,9 +158,9 @@
         </ng-container>
         <!-- gnomAD tab -->
         <ng-container *ngSwitchCase="2">
-          <a *ngIf="variantInfo.dbsnpRsid" href="https://gnomad.broadinstitute.org/variant/{{variantInfo.dbsnpRsid}}?dataset=gnomad_r2_1" target="_blank">
+          <cvc-link-tag *ngIf="variantInfo.dbsnpRsid" href="https://gnomad.broadinstitute.org/variant/{{variantInfo.dbsnpRsid}}?dataset=gnomad_r2_1">
             View this variant in the gnomAD browser
-          </a>
+          </cvc-link-tag>
           <nz-table #gnomadTable
             [nzData]="['.']"
             [nzFrontPagination]="false"
