--- a/client/src/app/components/shared/variant-popover/variant-popover.component.html
+++ b/client/src/app/components/shared/variant-popover/variant-popover.component.html
@@ -29,8 +29,9 @@
         <nz-descriptions-item nzTitle="Allele Registry ID"
           nzSpan="2"
           *ngIf="variant.alleleRegistryId">
-          <a href="https://reg.genome.network/allele/{{variant.alleleRegistryId}}.html"
-            target="_blank">{{variant.alleleRegistryId}}</a>
+          <cvc-link-tag href="https://reg.genome.network/allele/{{variant.alleleRegistryId}}.html" tooltip="View on the ClinGen Allele Registry">
+            {{variant.alleleRegistryId}}
+          </cvc-link-tag>
         </nz-descriptions-item>
 
         <!-- evidence item count -->
