--- a/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
+++ b/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
@@ -10,7 +10,9 @@
         <span routerLink="/organizatons/{{organization.id}}">
           {{ organization.name }}
         </span>
-        <a nz-button nzType="link" href="organization.url" target="_blank"><i nz-icon nzType="link"></i>Organization Website</a>
+        <cvc-link-tag [href]="organization.url">
+          Organization Website
+        </cvc-link-tag>
       </nz-space>
     </nz-page-header-title>
 
