--- a/client/src/app/views/assertions/assertions-summary/assertions-summary.component.html
+++ b/client/src/app/views/assertions/assertions-summary/assertions-summary.component.html
@@ -105,7 +105,7 @@
               </nz-descriptions-item>
 
               <!-- submit/accept/reject curation events -->
-              <nz-descriptions-item nzTitle="Submitted by">
+              <nz-descriptions-item nzTitle="Submitted">
                 <cvc-user-tag [user]="assertion.submissionEvent.originatingUser"></cvc-user-tag>
               </nz-descriptions-item>
 
@@ -115,11 +115,11 @@
                 <!-- show acceptance only if no rejection event exists -->
                 <ng-container [ngSwitch]="assertion.rejectionEvent === null">
                   <nz-descriptions-item *ngSwitchCase="true"
-                    nzTitle="Accepted by">
+                    nzTitle="Accepted">
                     <cvc-user-tag [user]="assertion.acceptanceEvent.originatingUser"></cvc-user-tag>
                   </nz-descriptions-item>
                   <nz-descriptions-item *ngSwitchCase="false"
-                    nzTitle="Rejected by">
+                    nzTitle="Rejected">
                     <cvc-user-tag [user]="assertion.rejectionEvent.originatingUser"></cvc-user-tag>
                   </nz-descriptions-item>
                 </ng-container>
@@ -130,20 +130,10 @@
 
           <!-- gene, variant info -->
           <nz-space-item>
-            <nz-descriptions nzLayout="vertical"
+            <nz-descriptions nzLayout="horizontal"
               nzSize="small"
               nzBordered="true"
-              [nzColumn]="4">
-
-              <!-- gene tag -->
-              <nz-descriptions-item nzTitle="Gene">
-                <cvc-gene-tag [gene]="assertion.gene"></cvc-gene-tag>
-              </nz-descriptions-item>
-
-              <!-- variant tag -->
-              <nz-descriptions-item nzTitle="Variant">
-                <cvc-variant-tag [variant]="assertion.variant"></cvc-variant-tag>
-              </nz-descriptions-item>
+              [nzColumn]="2">
 
               <!-- variant origin -->
               <nz-descriptions-item nzTitle="Variant Origin">
@@ -209,10 +199,10 @@
 
           <!-- drugs -->
           <nz-space-item>
-            <nz-descriptions nzLayout="vertical"
+            <nz-descriptions [nzLayout]="assertion.drugs.length > 1 ? 'vertical' : 'horizontal'"
               nzSize="small"
               nzBordered="true">
-              <nz-descriptions-item [nzTitle]="drugsTitle">
+              <nz-descriptions-item [nzTitle]="assertion.drugs.length > 1 ? 'Drugs' : 'Drug'">
                 <ng-container [ngPlural]="assertion.drugs.length">
                   <!-- no drug -->
                   <ng-template ngPluralCase="=0">
@@ -230,20 +220,6 @@
                   </ng-template>
                 </ng-container>
 
-                <!-- drug description title template -->
-                <ng-template #drugsTitle>
-                  <ng-container [ngPlural]="assertion.drugs.length">
-                    <ng-template ngPluralCase="=0">
-                      Drug
-                    </ng-template>
-                    <ng-template ngPluralCase="=1">
-                      Drug
-                    </ng-template>
-                    <ng-template ngPluralCase="other">
-                      Drugs ({{ assertion.drugInteractionType }})
-                    </ng-template>
-                  </ng-container>
-                </ng-template>
               </nz-descriptions-item>
             </nz-descriptions>
           </nz-space-item>
@@ -252,10 +228,10 @@
           <nz-space-item>
             <nz-descriptions nzLayout="horizontal"
               nzSize="small"
-              nzBordered="true">
-
+              nzBordered="true"
+              [nzColumn]="2">
               <!-- regulatory approval -->
-              <nz-descriptions-item nzTitle="Regulatory Approval">
+              <nz-descriptions-item nzTitle="Regulatory Approval" nzSpan="1">
                 <i nz-icon
                   *ngIf="assertion.regulatoryApproval"
                   [nzType]="'check-circle'"
@@ -269,7 +245,7 @@
               </nz-descriptions-item>
 
               <!-- FDA companion test -->
-              <nz-descriptions-item nzTitle="FDA Companion Test">
+              <nz-descriptions-item nzTitle="FDA Companion Test" nzSpan="1">
                 <i nz-icon
                   *ngIf="assertion.fdaCompanionTest"
                   [nzType]="'check-circle'"
@@ -283,7 +259,7 @@
               </nz-descriptions-item>
 
               <!-- NCCN guideline -->
-              <nz-descriptions-item nzTitle="NCCN Guideline">
+              <nz-descriptions-item nzTitle="NCCN Guideline" nzSpan="2">
                 <ng-container *ngIf="assertion.nccnGuideline">{{ assertion.nccnGuideline }}</ng-container>
                 <ng-container *ngIf="!assertion.nccnGuideline">
                   <span nz-typography
