created variangroup-tag, added to vg-browse table

--- a/client/src/app/views/variant-groups/variant-groups-browse/variant-groups-browse.component.html
+++ b/client/src/app/views/variant-groups/variant-groups-browse/variant-groups-browse.component.html
@@ -57,7 +57,7 @@
               <tbody>
                 <tr *ngFor="let vg of variantGroupsTable.data">
                   <td>
-                    {{ vg.name }}
+                    <cvc-variantgroup-tag [variantgroup]="vg"></cvc-variantgroup-tag>
                   </td>
                   <td>
                     <p nz-typography>
