--- a/client/src/app/components/shared/tag-pileup/tag-pileup.component.html
+++ b/client/src/app/components/shared/tag-pileup/tag-pileup.component.html
@@ -10,10 +10,10 @@
       </ng-container>
     </ng-container>
   </div>
-  <div [ngClass]="{'matched-tag': matchedHidden}">
+  <div [ngClass]="{'matched-tag': matchedHiddenCount > 0}">
     <nz-tag *ngIf="hiddenCount && hiddenCount > 0" nz-popover [nzPopoverMouseEnterDelay]="0.5"
       [nzPopoverContent]="additionalTagPopover" nzPopoverPlacement="top" nzPopoverTrigger="hover">
-      +{{this.hiddenCount}} more
+      +<span *ngIf="matchedHiddenCount > 0">{{matchedHiddenCount}} of </span>{{this.hiddenCount}} more
     </nz-tag>
   </div>
   <ng-template #additionalTagPopover>
