--- a/client/src/app/components/shared/section-navigation/section-navigation.component.html
+++ b/client/src/app/components/shared/section-navigation/section-navigation.component.html
@@ -1,19 +1,18 @@
-<nz-row id="nav-container" [ngClass]="{ 'has-relations': relationsTpl !== undefined }">
+<nz-row id="nav-container"
+  [ngClass]="{ 'has-relations': relationsTpl !== undefined }">
 
   <!-- breadcrumbs -->
-  <nz-col nzSpan="8" id="breadcrumbs">
+  <nz-col nzSpan="10"
+    id="breadcrumbs">
     <nz-breadcrumb [nzAutoGenerate]="true"
       [nzRouteLabelFn]="getRouteLabel"></nz-breadcrumb>
   </nz-col>
 
   <!-- relations summary -->
-  <nz-col nzSpan="16" id="relations-summary">
-    <ng-template [ngTemplateOutlet]="relationsTpl || noRelations"></ng-template>
-
-    <ng-template #noRelations>
-      <!-- show nothing if no relations tpl provided -->
-    </ng-template>
-
+  <nz-col *ngIf="relationsTpl"
+    [nzSpan]="14"
+    id="relations-summary">
+    <ng-template [ngTemplateOutlet]="relationsTpl"></ng-template>
   </nz-col>
 
 </nz-row>
