added variant-groups query, description to summary template

--- a/client/src/app/views/variant-groups/variant-groups-detail/variant-groups-detail.component.html
+++ b/client/src/app/views/variant-groups/variant-groups-detail/variant-groups-detail.component.html
@@ -2,8 +2,8 @@
   <cvc-section-navigation
     [entity]="{ id: variantGroup.id, displayName: variantGroup.name}">
   </cvc-section-navigation>
-  <!-- <div cvcFlaggable
-       [flags]="flagsTotal$ | ngrxPush"> -->
+  <div cvcFlaggable
+    [flags]="flagsTotal$ | ngrxPush">
 
     <nz-page-header class="site-page-header">
 
@@ -59,6 +59,5 @@
         </div>
       </nz-page-header-content>
     </nz-page-header>
-    <!-- cvcFlaggable closing div: -->
-    <!-- </div> -->
+  </div>
 </ng-container>
