more generalized icon for details summary tab

--- a/client/src/app/components/shared/details-navigation/details-navigation.component.html
+++ b/client/src/app/components/shared/details-navigation/details-navigation.component.html
@@ -15,7 +15,7 @@
         <a *nzTabLink
           nz-tab-link routerLink="summary">
           <i nz-icon
-            nzType="civic-gene"></i>
+            nzType="pic-left"></i>
           Summary
         </a>
 
