placeholder for variant menu

--- a/client/src/app/views/variant-groups/variant-groups-summary/variant-groups-summary.component.html
+++ b/client/src/app/views/variant-groups/variant-groups-summary/variant-groups-summary.component.html
@@ -51,4 +51,15 @@
       </nz-col>
     </nz-row>
   </nz-space-item>
+
+  <!-- variant menu row -->
+  <nz-space-item>
+    <nz-row [nzGutter]="16">
+      <nz-col [nzSpan]="24">
+        <h3>Variant Menu Here</h3>
+        <!-- <cvc-variant-menu [geneId]="gene.id"
+             [geneName]="gene.name"></cvc-variant-menu> -->
+      </nz-col>
+    </nz-row>
+  </nz-space-item>
 </nz-space>
