--- a/client/src/app/components/shared/variants-browse/variants-browse.component.html
+++ b/client/src/app/components/shared/variants-browse/variants-browse.component.html
@@ -1,3 +1,4 @@
+<cvc-section-navigation> </cvc-section-navigation>
 <nz-page-header class="site-page-header">
 
   <!--title-->
@@ -18,7 +19,7 @@
               [nzLoading]="(isLoading$ | ngrxPush)"
               [nzFrontPagination]="false"
               [nzShowPagination]="false"
-              >
+            >
               <thead (nzSortOrderChange)="onSortChanged($event)" >
                 <tr>
                   <th nzWidth="10%" [nzColumnKey]="sortColumns.VariantName" [nzSortFn]="true">
