--- a/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="assertion$ | ngrxPush as assertion">
-  <cvc-section-navigation [entity]="{ id: assertion.id, displayName: assertion.name }"
+  <cvc-section-navigation [displayName]="assertion.name"
     [relationsTpl]="assertionRelations">
   </cvc-section-navigation>
   <ng-template #assertionRelations>
