--- a/client/src/app/views/variant-groups/variant-groups-browse/variant-groups-browse.component.html
+++ b/client/src/app/views/variant-groups/variant-groups-browse/variant-groups-browse.component.html
@@ -1,4 +1,4 @@
-
+<cvc-section-navigation> </cvc-section-navigation>
 <nz-page-header class="site-page-header">
 
   <!--title-->
@@ -19,7 +19,7 @@
               [nzLoading]="(isLoading$ | ngrxPush)"
               [nzFrontPagination]="false"
               [nzShowPagination]="false"
-              >
+            >
               <thead (nzSortOrderChange)="onSortChanged($event)" >
                 <tr>
                   <th nzWidth="20%" [nzColumnKey]="sortColumns.Name" [nzSortFn]="true">
