--- a/client/src/app/views/variants/variants-detail/variants-detail.component.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="variant$ | ngrxPush as variant">
-  <cvc-section-navigation [displayName]="variant.name" [relationsTpl]="variantRelations">
+  <cvc-section-navigation [displayName]="variant.gene.name + ' \: ' + variant.name" [relationsTpl]="variantRelations">
   </cvc-section-navigation>
   <ng-template #variantRelations>
     <nz-space nzDirection="horizontal">
