added section-nav to all entities, attributes section browse & detail pages

--- a/client/src/app/components/shared/evidence-browse/evidence-browse.component.less
+++ b/client/src/app/components/shared/evidence-browse/evidence-browse.component.less
@@ -1,13 +1,1 @@
-@import 'global-variables.less';
-
-:host {
-  display: block;
-}
-
-nz-page-header {
-  background-color: white;
-}
-
-nz-table {
-  min-height: 500px;
-}
+@import 'overrides/entity-page-header.overrides.less';
