--- a/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
+++ b/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="phenotype$ | ngrxPush as phenotype" >
+  <cvc-section-navigation [displayName]="phenotype.name"> </cvc-section-navigation>
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <nz-space nzDirection="horizontal">
