--- a/client/src/app/views/sources/sources-browse/sources-browse.component.less
+++ b/client/src/app/views/sources/sources-browse/sources-browse.component.less
@@ -1,7 +1,1 @@
-:host {
-    display: block;
-}
-  
-nz-page-header {
-    background-color: white;
-}
+@import 'overrides/entity-page-header.overrides.less';
