--- a/client/src/app/views/sources/sources-detail/sources-detail.component.html
+++ b/client/src/app/views/sources/sources-detail/sources-detail.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="source$ | ngrxPush as source" >
+  <cvc-section-navigation [displayName]="source.citation"> </cvc-section-navigation>
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <nz-space nzDirection="horizontal">
