--- a/client/src/app/views/variant-types/variant-types-browse/variant-types-browse.component.html
+++ b/client/src/app/views/variant-types/variant-types-browse/variant-types-browse.component.html
@@ -1,3 +1,4 @@
+<cvc-section-navigation> </cvc-section-navigation>
 <nz-page-header class="site-page-header">
   <nz-page-header-title>
     <i nz-icon nzType="apartment"></i>
