--- a/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
+++ b/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
@@ -1,4 +1,5 @@
 <ng-container *ngIf="variantType$ | ngrxPush as variantType" >
+  <cvc-section-navigation [displayName]="variantType.name"> </cvc-section-navigation>
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <nz-space nzDirection="horizontal">
