created refactored replacements for gene-tag, gene-popover

--- a/client/src/themes/overrides/entity-popover.overrides.less
+++ b/client/src/themes/overrides/entity-popover.overrides.less
@@ -2,6 +2,7 @@
 
 :host {
   // remove default popover padding so that component edges are flush with popover border
+  display: block;
   margin: -@padding-sm -@popover-padding-horizontal;
 }
 
